--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -1,32 +1,40 @@
-name: Java CI/CD
+# This workflow will build a Java project with Maven, and cache/restore any dependencies to improve the workflow execution time
+# For more information see: https://docs.github.com/en/actions/automating-builds-and-tests/building-and-testing-java-with-maven
+
+# This workflow uses actions that are not certified by GitHub.
+# They are provided by a third-party and are governed by
+# separate terms of service, privacy policy, and support
+# documentation.
+
+name: Java CI with Maven
 
 on:
   push:
-    branches:
-      - main
+    branches: [ "main" ]
   pull_request:
-    branches:
-      - main
+    branches: [ "main" ]
 
 jobs:
   build:
+
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v2
+    - uses: actions/checkout@v3
+    - name: Set up JDK 11
+      uses: actions/setup-java@v3
+      with:
+        java-version: '11'
+        distribution: 'temurin'
+        cache: maven
+    - name: Build with Maven
+      run: mvn -B package --file pom.xml
 
-      - name: Set up JDK
-        run: echo "Setting up JDK..."
+    - name: Run Unit Tests
+      run: mvn test -Dtest=com.example.MyCalculatorTest
 
-      - name: Build with Maven
-        run: echo "Building with Maven..."
+    - name: Run Integration Tests        
+      run: mvn test -Dtest=com.example.IntegrationTest
 
-      - name: Run Unit Tests
-        run: echo "Running unit tests..."
-
-      - name: Run Integration Tests
-        run: echo "Running integration tests..."
-
-      - name: Run Regression Tests
-        run: echo "Running regression tests..."
+    - name: Run Regression Tests
+      run: mvn test -Dtest=com.example.RegressionTest
