--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -5,7 +5,6 @@
 # They are provided by a third-party and are governed by
 # separate terms of service, privacy policy, and support
 # documentation.
-
 name: Java CI with Maven
 
 on:
@@ -16,25 +15,40 @@ on:
 
 jobs:
   build:
-
     runs-on: ubuntu-latest
 
     steps:
-    - uses: actions/checkout@v3
-    - name: Set up JDK 11
-      uses: actions/setup-java@v3
-      with:
-        java-version: '11'
-        distribution: 'temurin'
-        cache: maven
-    - name: Build with Maven
-      run: mvn -B package --file pom.xml
+      - uses: actions/checkout@v3
+      - name: Set up JDK 11
+        uses: actions/setup-java@v3
+        with:
+          java-version: '11'
+          distribution: 'temurin'
+          cache: maven
+      - name: Build with Maven
+        run: mvn -B package --file pom.xml
+      - name: Run Unit Tests
+        run: mvn test -Dtest=com.example.MyCalculatorTest
+      - name: Run Integration Tests        
+        run: mvn test -Dtest=com.example.IntegrationTest
+      - name: Run Regression Tests
+        run: mvn test -Dtest=com.example.RegressionTest
 
-    - name: Run Unit Tests
-      run: mvn test -Dtest=com.example.MyCalculatorTest
+  deploy:
+    needs: [build, test]
+    runs-on: ubuntu-latest
 
-    - name: Run Integration Tests        
-      run: mvn test -Dtest=com.example.IntegrationTest
-
-    - name: Run Regression Tests
-      run: mvn test -Dtest=com.example.RegressionTest
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v2
+      - name: Set up JDK
+        uses: actions/setup-java@v2
+        with:
+          java-version: '11'
+      - name: Build with Maven
+        run: mvn clean install
+      - name: Deploy to GitHub Pages
+        uses: peaceiris/actions-gh-pages@v3
+        with:
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+          publish_dir: ./target/generated-docs
