--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -27,20 +27,24 @@ jobs:
           cache: maven
       - name: Build with Maven
         run: mvn -B package --file pom.xml
+
       - name: Run Unit Tests
         run: mvn test -Dtest=com.example.MyCalculatorTest
+
       - name: Run Integration Tests        
         run: mvn test -Dtest=com.example.IntegrationTest
+
       - name: Run Regression Tests
         run: mvn test -Dtest=com.example.RegressionTest
 
   deploy:
-    needs: [build, test]
+    needs: [build]
     runs-on: ubuntu-latest
 
     steps:
       - name: Checkout code
         uses: actions/checkout@v2
+
       - name: Set up JDK
         uses: actions/setup-java@v2
         with:
