--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -68,3 +68,13 @@ jobs:
       - name: Deploy to GitHub Pages
         id: deployment
         uses: actions/deploy-pages@v2
+      - name: Upload Artifact
+        id: upload_artifact
+        uses: actions/upload-release-asset@v1
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        with:
+          upload_url: ${{ steps.create_release.outputs.upload_url }}
+          asset_path: ./target/my-app.jar
+          asset_name: my-app.jar
+          asset_content_type: application/java-archive
