--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -68,6 +68,25 @@ jobs:
       - name: Deploy to GitHub Pages
         id: deployment
         uses: actions/deploy-pages@v2
+        
+      - name: Create Release
+        id: create_release
+        uses: actions/github-script@v4
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        with:
+          script: |
+            const response = await github.repos.createRelease({
+              owner: context.repo.owner,
+              repo: context.repo.repo,
+              tag_name: context.ref,
+              name: `Release ${context.ref}`,
+              draft: false,
+              prerelease: false
+            });
+            console.log(response.data.upload_url);
+            core.setOutput('upload_url', response.data.upload_url)
+
       - name: Upload Artifact
         id: upload_artifact
         uses: actions/upload-release-asset@v1
@@ -78,3 +97,4 @@ jobs:
           asset_path: ./target/my-app.jar
           asset_name: my-app.jar
           asset_content_type: application/java-archive
+      
